--- a/tf-idf/tf_idf.ipynb
+++ b/tf-idf/tf_idf.ipynb
@@ -6,6 +6,15 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This notebook was originally written by Søren Fomsgaard, july 2020."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
