finished getting filenames for drunk term search

--- a/tf-idf/tf_idf.ipynb
+++ b/tf-idf/tf_idf.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,16 +749,167 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Stella's function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frequency_results = pd.read_excel('multiple_results.xlsx', sheet_name='trimmed_results', index_col=False).set_index('file_id' , inplace=True)\n",
+    "df_results = pd.read_excel('multiple_results.xlsx', sheet_name='trimmed_results', index_col=False, skipfooter=1).set_index('file_id' , inplace=True) #for using the function below\n",
+    "raw_search = pd.read_excel('multiple_results.xlsx', sheet_name='raw_results', index_col=False).set_index('file_id' , inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#df_results = pd.read_excel(\"freq_dict.xlsx\")\n",
+    "\n",
+    "def get_tf_idf(final_df, freq_df, term):\n",
+    "    \"\"\"\n",
+    "    Blablabla\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    final_df[term+'_freq'] = freq_df[term]\n",
+    "    final_df['tf_'+term] = (final_df[str(term+'_freq')] / final_df['text_length'])\n",
+    "    \n",
+    "    counter = 0\n",
+    "    for index, freq in enumerate(final_df[term+'_freq']):\n",
+    "        if final_df.iloc[index][term+'_freq'] != 0:\n",
+    "            counter+= 1\n",
+    "        \n",
+    "    final_df['idf_'+term] = (math.log((len(final_df['file_id']))/ counter))\n",
+    "    \n",
+    "    final_df['tf.idf_'+term] = final_df['tf_'+term] * final_df['idf_'+term]\n",
+    "    \n",
+    "    columns = ['tf_'+term, 'idf_'+term, term+'_freq']\n",
+    "    final_df = final_df.drop(columns, axis=1)\n",
+    "    return(final_df)\n",
+    "\n",
+    "final_df = pd.DataFrame()\n",
+    "final_df['file_id'] = df_results['file_id']\n",
+    "final_df['text_length'] = df_results['text_length']\n",
+    "\n",
+    "freq_df = df_results\n",
+    "\n",
+    "final_df = get_tf_idf(final_df, freq_df, 'drunk')\n",
+    "final_df = get_tf_idf(final_df, freq_df, 'beer')\n",
+    "final_df = get_tf_idf(final_df, freq_df, 'intoxicat')\n",
+    "final_df = get_tf_idf(final_df, freq_df, 'temperance')\n",
+    "final_df = get_tf_idf(final_df, freq_df, 'liquor')\n",
+    "final_df = get_tf_idf(final_df, freq_df, 'alcohol')\n",
+    "final_df = get_tf_idf(final_df, freq_df, 'brandy')\n",
+    "final_df = get_tf_idf(final_df, freq_df, 'booz')\n",
+    "final_df = get_tf_idf(final_df, freq_df, 'drunkard')\n",
+    "#final_df = get_tf_idf(final_df, freq_df, 'by-drink') # the search never finds this!\n",
+    "\n",
+    "# find the averages\n",
+    "final_df['average_tf.idf'] = (final_df.iloc[: ,3 :].sum(axis=1) / len((final_df.iloc[: ,3 :].columns)))\n",
+    "\n",
+    "#final_df.to_excel('tf_idf_Soren2.xlsx', index_label='file_id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "                                         file_id  text_length  tf.idf_drunk  \\\n0            1676-01-17_o16760117-1-defend16.txt         1106      0.000000   \n1           1676-04-05_t16760405-10-victim20.txt          147      0.000000   \n2            1676-08-23_t16760823-4-punish14.txt          275      0.003577   \n3           1676-12-13_t16761213-5-verdict15.txt           88      0.011179   \n4            1677-06-01_t16770601-1-verdict3.txt          135      0.007287   \n...                                          ...          ...           ...   \n28151  1913-04-01_t19130401-34-punishment-44.txt          933      0.000000   \n28152  1913-04-01_t19130401-38-punishment-46.txt          690      0.002851   \n28153      1913-04-01_t19130401-45-verdict-2.txt         1169      0.000000   \n28154  1913-04-01_t19130401-46-punishment-51.txt          705      0.002791   \n28155  1913-04-01_t19130401-47-punishment-52.txt          566      0.001738   \n\n       tf.idf_beer  tf.idf_intoxicat  tf.idf_temperance  tf.idf_liquor  \\\n0         0.000650               0.0                0.0            0.0   \n1         0.004890               0.0                0.0            0.0   \n2         0.000000               0.0                0.0            0.0   \n3         0.000000               0.0                0.0            0.0   \n4         0.000000               0.0                0.0            0.0   \n...            ...               ...                ...            ...   \n28151     0.000770               0.0                0.0            0.0   \n28152     0.002083               0.0                0.0            0.0   \n28153     0.003074               0.0                0.0            0.0   \n28154     0.000000               0.0                0.0            0.0   \n28155     0.001270               0.0                0.0            0.0   \n\n       tf.idf_alcohol  tf.idf_brandy  tf.idf_booz  tf.idf_drunkard  \\\n0                 0.0            0.0          0.0              0.0   \n1                 0.0            0.0          0.0              0.0   \n2                 0.0            0.0          0.0              0.0   \n3                 0.0            0.0          0.0              0.0   \n4                 0.0            0.0          0.0              0.0   \n...               ...            ...          ...              ...   \n28151             0.0            0.0          0.0              0.0   \n28152             0.0            0.0          0.0              0.0   \n28153             0.0            0.0          0.0              0.0   \n28154             0.0            0.0          0.0              0.0   \n28155             0.0            0.0          0.0              0.0   \n\n       average_tf.idf  \n0            0.000081  \n1            0.000611  \n2            0.000000  \n3            0.000000  \n4            0.000000  \n...               ...  \n28151        0.000096  \n28152        0.000260  \n28153        0.000384  \n28154        0.000000  \n28155        0.000159  \n\n[28156 rows x 12 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>file_id</th>\n      <th>text_length</th>\n      <th>tf.idf_drunk</th>\n      <th>tf.idf_beer</th>\n      <th>tf.idf_intoxicat</th>\n      <th>tf.idf_temperance</th>\n      <th>tf.idf_liquor</th>\n      <th>tf.idf_alcohol</th>\n      <th>tf.idf_brandy</th>\n      <th>tf.idf_booz</th>\n      <th>tf.idf_drunkard</th>\n      <th>average_tf.idf</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1676-01-17_o16760117-1-defend16.txt</td>\n      <td>1106</td>\n      <td>0.000000</td>\n      <td>0.000650</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000081</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1676-04-05_t16760405-10-victim20.txt</td>\n      <td>147</td>\n      <td>0.000000</td>\n      <td>0.004890</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000611</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1676-08-23_t16760823-4-punish14.txt</td>\n      <td>275</td>\n      <td>0.003577</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1676-12-13_t16761213-5-verdict15.txt</td>\n      <td>88</td>\n      <td>0.011179</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1677-06-01_t16770601-1-verdict3.txt</td>\n      <td>135</td>\n      <td>0.007287</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>28151</th>\n      <td>1913-04-01_t19130401-34-punishment-44.txt</td>\n      <td>933</td>\n      <td>0.000000</td>\n      <td>0.000770</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000096</td>\n    </tr>\n    <tr>\n      <th>28152</th>\n      <td>1913-04-01_t19130401-38-punishment-46.txt</td>\n      <td>690</td>\n      <td>0.002851</td>\n      <td>0.002083</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000260</td>\n    </tr>\n    <tr>\n      <th>28153</th>\n      <td>1913-04-01_t19130401-45-verdict-2.txt</td>\n      <td>1169</td>\n      <td>0.000000</td>\n      <td>0.003074</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000384</td>\n    </tr>\n    <tr>\n      <th>28154</th>\n      <td>1913-04-01_t19130401-46-punishment-51.txt</td>\n      <td>705</td>\n      <td>0.002791</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>28155</th>\n      <td>1913-04-01_t19130401-47-punishment-52.txt</td>\n      <td>566</td>\n      <td>0.001738</td>\n      <td>0.001270</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000159</td>\n    </tr>\n  </tbody>\n</table>\n<p>28156 rows × 12 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 30
+    }
+   ],
+   "source": [
+    "final_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "0        0.000081\n1        0.000611\n2        0.000000\n3        0.000000\n4        0.000000\n           ...   \n28151    0.000096\n28152    0.000260\n28153    0.000384\n28154    0.000000\n28155    0.000159\nLength: 28156, dtype: float64"
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
+   "source": [
+    "final_df.iloc[: ,3 :].mean(axis=1) # the statistical mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "0        0.000081\n1        0.000611\n2        0.000000\n3        0.000000\n4        0.000000\n           ...   \n28151    0.000096\n28152    0.000260\n28153    0.000384\n28154    0.000000\n28155    0.000159\nLength: 28156, dtype: float64\n"
+    }
+   ],
+   "source": [
+    "average = (final_df.iloc[: ,3 :].sum(axis=1) / len((final_df.iloc[: ,3 :].columns)))\n",
+    "print(average)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "writer = pd.ExcelWriter('final_results.xlsx', engine='xlsxwriter')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df.to_excel(writer, sheet_name='tf-idf_results', index_label='file_id' )\n",
+    "frequency_results.to_excel(writer, sheet_name='frequency_results')\n",
+    "raw_search.to_excel(writer, sheet_name='raw_results')\n",
+    "writer.save()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def get_tf(term_column):\n",
-    "    \"\"\"\n",
-    "    gets\n",
-    "    \"\"\""
-   ]
+   "source": []
   }
  ],
  "metadata": {
