adjusted search query to not count two specific similar terms

--- a/tf-idf/filename_handling.ipynb
+++ b/tf-idf/filename_handling.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,6 +124,33 @@
    ],
    "source": [
     "files_to_sparql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# re for the Victorian Era\n",
+    "\n",
+    "ve = '[a-z]*18[2-9]\\d*-*\\w+|\\[a-z]*19\\d+-*\\w+'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# read the files\n",
+    "with open('files_to_sparql.txt', 'r') as infile:\n",
+    "        with open('VE_drunk_files_to_sparql.txt', 'w') as outfile:\n",
+    "            for filename in infile:\n",
+    "                if re.match(ve, filename):\n",
+    "                    outfile.write('oldbailey:' + filename + ',')"
    ]
   },
   {
