--- a/tf-idf/tf_idf.ipynb
+++ b/tf-idf/tf_idf.ipynb
@@ -246,7 +246,7 @@
    "outputs": [],
    "source": [
     "searchQuery = [\n",
-    "                \"drunk\\w*\",\n",
+    "                \"drunk(?!ard)\\w*-*\",\n",
     "                \"intoxicat\\-?\\w*\",\n",
     "                \"temperance\",\n",
     "                \"beer\\-?\\w*\",\n",
