credited Stella, added missing docstring

--- a/tf-idf/tf_idf.ipynb
+++ b/tf-idf/tf_idf.ipynb
@@ -11,7 +11,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This notebook was originally written by Søren Fomsgaard, july 2020."
+    "# This notebook was originally written by Søren Fomsgaard, july 2020.\n",
+    "# Unless otherwise specified, assume that code is written by the above."
    ]
   },
   {
@@ -503,12 +504,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This cell was written by Stella Verkijk, july 2020.\n",
     "\n",
     "#df_results = pd.read_excel(\"freq_dict.xlsx\")\n",
     "\n",
     "def get_tf_idf(final_df, freq_df, term):\n",
     "    \"\"\"\n",
-    "    Blablabla\n",
+    "    Calculate tf_idf scores based on a dataframe with word frequencies.\n",
     "    \"\"\"\n",
     "    \n",
     "    final_df[term+'_freq'] = freq_df[term]\n",
